<resources>
    <string name="app_name">Coursera</string>

    <!-- Week 2 -->
    <string name="onCreate">onCreate() calls: 0</string>
    <string name="onStart">onStart() calls: 0</string>
    <string name="onResume">onResume() calls: 0</string>
    <string name="onRestart">onRestart() calls: 0</string>
    <string name="button">Start Activity Two</string>
    <string name="title_activity_activity_two">Activity Two</string>
    <string name="close">Close Activity</string>

    <!-- Week 3 - Intents -->
    <string name="title_explicit">Explicit Activation</string>
    <string name="title_main">Activity Loader Activity</string>
    <string name="explicit_message">You have sent an Explicit Intent!</string>
    <string name="explicit_activation_button_string">Explicit Activation</string>
    <string name="implicit_activation_button_string">Implicit Activation</string>
    <string name="no_text_entered">No Text Entered...</string>
    <string name="enter_string">Enter</string>
    <string name="enter_text_here_string">Enter Text Here</string>

    <!-- Week 3 - Permissions -->
    <string name="permissions_title_main">PermissionsLab</string>
    <string name="start_bookmarks_button">Bookmarks Activity</string>
    <string name="title_permissions">Permissions</string>
    <string name="get_bookmarks">Get Bookmarks</string>
    <string name="get_dangerous_activity">Go To Dangerous Activity</string>
    <string name="place_holder">Bookmarks Go Here</string>
    <string name="title_activity_customization">Customization</string>
    <string name="start_dangerous_activity">Start Dangerous Activity</string>
    <string name="customised_message">This button will load a Dangerous Level activity</string>
    <string name="dangerous_activity_text">Dangerous!!</string>
    <string name="dangerous_permission_label">Dangerous Action</string>
    <string name="dangerous_permission_description">This action will invoke a dangerous application</string>

    <!-- Week 3 - Fragments -->
    <string name="greeting">Select a feed to view!</string>

    <!-- Week 4 - UI -->
    <string name="done_string">Done:</string>
    <string name="priority_string">Priority:</string>
    <string name="date_string">Date:</string>
    <string name="add_new_todo_item_string">Add New ToDo Item</string>
    <string name="add_todo_title">Title</string>
    <string name="status_string">Status</string>
    <string name="not_done_string">Not Done</string>
    <string name="priority_low_string">Low</string>
    <string name="priority_medium_string">Medium</string>
    <string name="priority_high_string">High</string>
    <string name="time_and_date_string">Time and Date</string>
    <string name="no_date_set_string">0000&#8211;00&#8211;00</string>
    <string name="no_time_set_string">00:00:00</string>
    <string name="choose_date_string">Choose Date</string>
    <string name="choose_time_string">Choose Time</string>
    <string name="cancel_string">Cancel</string>
    <string name="reset_string">Reset</string>
    <string name="submit_string">Submit</string>
    <string name="enter_title_string">Enter Title</string>

    <!-- Week 4 - Modern Art -->
    <string name="modern_art_info">Inspired by the works of artists such as Piet Mondrian and Ben Nicholson.</string>
    <string name="modern_art_explain">Click below to learn more!</string>
    <string name="modern_art_link">Visit MOMA</string>
    <string name="modern_art_cancel">Not Now</string>

</resources>
