<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- Title -->
    <TextView android:id="@+id/title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_todo_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/add_todo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_label"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/enter_title_string"
        android:inputType="textShortMessage">

        <requestFocus />
    </EditText>

    <!-- Status -->
    <TextView android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/add_todo_title"
        android:layout_marginTop="25dp"
        android:text="@string/status_string"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup android:id="@+id/add_todo_status_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/status"
        android:orientation="horizontal"
        android:layout_marginTop="12dp" >

        <RadioButton android:id="@+id/add_todo_status_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done_string" />

        <RadioButton android:id="@+id/add_todo_status_not_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/not_done_string" />

    </RadioGroup>

    <!-- Priority -->
    <TextView android:id="@+id/priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/add_todo_status_group"
        android:layout_marginTop="25dp"
        android:text="@string/priority_string"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup android:id="@+id/add_todo_priority_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/priority"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:text="@string/priority_string" >

        <RadioButton android:id="@+id/add_todo_low_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_low_string" />

        <RadioButton android:id="@+id/add_todo_medium_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/priority_medium_string" />

        <RadioButton android:id="@+id/add_todo_high_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_high_string" />
    </RadioGroup>

    <!-- Time and Date -->
    <TextView android:id="@+id/time_and_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/add_todo_priority_group"
        android:layout_marginTop="25dp"
        android:text="@string/time_and_date_string"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView android:id="@+id/add_todo_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/time_and_date"
        android:layout_marginTop="12dp"
        android:text="@string/no_date_set_string" />

    <TextView  android:id="@+id/add_todo_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/add_todo_date"
        android:layout_below="@+id/time_and_date"
        android:text="@string/no_time_set_string" />

    <Button android:id="@+id/add_todo_date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/add_todo_date"
        android:text="@string/choose_date_string" />

    <Button android:id="@+id/add_todo_time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/add_todo_date_picker"
        android:layout_below="@id/add_todo_time"
        android:text="@string/choose_time_string" />

    <!-- Buttons -->
    <Button android:id="@+id/add_todo_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="25dp"
        android:text="@string/cancel_string" />

    <Button android:id="@+id/add_todo_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_string" />

    <Button android:id="@+id/add_todo_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/submit_string" />

</RelativeLayout>