<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:id="@+id/bookmarks_textview"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:maxHeight="250dp"
        android:text="@string/place_holder" />

    <Button android:id="@+id/get_bookmarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_bookmarks" />

    <Button android:id="@+id/get_dangerous_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_dangerous_activity" />

</LinearLayout>
